# camel

./: .pre-commit-config.yaml  README.md  camel.py  hello.py  pyproject.toml  test_camel.py
.github/workflows/: basic.yml  matrix.yml
